--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,23 +4,23 @@
 	android:versionName="1.0">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:theme="@android:style/Theme.NoTitleBar">
-		<activity android:name=".SplashScreenActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" android:label="@string/app_name">
+		<activity android:name="com.bc.SplashScreenActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".MainActivity"
+		<activity android:name="com.bc.MainActivity"
 			android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation"
 			android:windowSoftInputMode="stateVisible|adjustPan" />
-		<activity android:name=".TransactionTabActivity"
+		<activity android:name="com.bc.TransactionTabActivity"
 			android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
-		<activity android:name=".NavExpenseActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
-		<activity android:name=".SettingAccountActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
-        <activity android:name=".SettingAddOrEditAccountActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
-        <activity android:name=".TransferActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
-        <activity android:name=".KeyPad" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
-		<activity android:name=".BudgetActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+		<activity android:name="com.bc.NavExpenseActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+		<activity android:name="com.bc.SettingAccountActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+        <activity android:name="com.bc.SettingAddOrEditAccountActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+        <activity android:name="com.bc.TransferActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+        <activity android:name="com.bc.KeyPad" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+		<activity android:name="com.bc.BudgetActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
 	</application>
 	<uses-sdk android:minSdkVersion="7" />
 
