--- a/project.properties
+++ b/project.properties
@@ -11,4 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-10
+target=android-19
+android.library.reference.3=../../Documents/adt-bundle-windows-x86_64-20140321/sdk/extras/android/support/v7/mediarouter
+android.library.reference.1=../../Documents/adt-bundle-windows-x86_64-20140321/sdk/extras/android/support/v7/appcompat
+android.library.reference.2=../../Documents/adt-bundle-windows-x86_64-20140321/sdk/extras/android/support/v7/gridlayout
